Update Icon Colors

--- a/src/public/css/config.css
+++ b/src/public/css/config.css
@@ -1139,7 +1139,7 @@ nav nav-pills>li>a {
     justify-content: center;
     align-items: center;
     color: #fff;
-    background: #2f36be;
+    background: green;
     border-radius: 50%;
     margin-right: 8px;
 }
