Ensuring https setup

--- a/src/public/css/config.css
+++ b/src/public/css/config.css
@@ -143,7 +143,7 @@ input:focus, select:focus, textarea:focus, button:focus {
 }
 
 .sidebarUserListItemTitle {
-    flex: 1 1 0%;
+    /* flex: 1 1 0%; */
     min-width: 0;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -1349,5 +1349,10 @@ section.playground, div.embed.row{
 }
 .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: none !important;
+}
+}
+@media (max-width: 767px){
+.hidden-xs {
+    display: none !important;
 }
 }
