--- a/src/public/css/config.css
+++ b/src/public/css/config.css
@@ -1358,7 +1358,7 @@ section.playground, div.embed.row{
 }
 }
 
-@media (max-width: 767px)
+@media (max-width: 767px){
 .hidden-xs {
     display: inline-block !important;
 }
