--- a/test/app.css
+++ b/test/app.css
@@ -10,7 +10,9 @@
 .h-100px{
     height:100px !important;
 }
-
+h1.embed {
+    margin: 0px auto !important; 
+}
 .no-padding{
     padding:0px !important;
 }
@@ -55,7 +57,8 @@
 }
 
 .login-form-container .col-md-4{
-    padding:0px . !important;
+    padding-left:10px !important;
+    padding-right:10px !important;
 }
 
 
